--- a/src/components/Formulario/Formulario.module.scss
+++ b/src/components/Formulario/Formulario.module.scss
@@ -6,6 +6,7 @@
     border-radius: 10px;
     box-shadow: 2px 4px 4px #0000009F;
     padding: 12px;
+    margin-bottom: 50px;
   
     .inputContainer {
       display: flex;
